# media-player

./: .env.example  .gitignore  Makefile  README.md  ReadMe.txt  config.yaml
.github/workflows/: ci.yml
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts
backend/: .dockerignore  Dockerfile  go.mod  go.sum
backend/cmd/server/: main.go
backend/migrations/: 001_init.sql
client/linux/music/: login.cpp  (+26 more)
deployments/local/: compose.yaml
deployments/production/: .env.example  Caddyfile.media-player  README.md  compose.yaml  deploy.sh
frontend/: .dockerignore  Caddyfile  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: manifest.webmanifest  service-worker.js
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
scripts/: generate_karaoke_library.py  generate_karaoke_timeline.py  merge_shared_lyrics.py  start-lan.ps1
server/: CMakeLists.txt  autobuild.sh  main.cpp
server/src/: CMakeLists.txt
server/src/common/include/: common.h
server/src/common/src/: CMakeLists.txt  common.cpp
server/src/filemanager/include/: file_manager.h
server/src/filemanager/src/: CMakeLists.txt  file_manager.cpp
server/src/logger/include/: log.h
server/src/logger/src/: CMakeLists.txt  log.cpp
server/src/msg/protobuf/: CMakeLists.txt  cmd  music.pb.cc  music.pb.h  music.proto
server/src/network/include/: event.h  msg_manage.h  msg_process.h  server.h  task.h  threadpool.hpp
server/src/network/src/: CMakeLists.txt  event.cpp  msg_manage.cpp  msg_process.cpp  server.cpp  task.cpp
(+63 files in other folders)
